# qt-car-dealership

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  add_table_comments.sql  car-dealership.sql  check-deployment.ps1  check-postgresql-en.bat  create_tables.sql  deploy-en.bat  deploy.ps1  mainwindow.cpp  mainwindow.h  mainwindow.ui  update_schema.sql
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
backend/: CMakeLists.txt  cart.cpp  cart.h  contract_templates.cpp  contract_templates.h  database_handler.cpp  database_manager.cpp  database_manager.h  domain.h  edit_dialog.cpp  floating_widgets.cpp  floating_widgets.h  product_card.cpp  product_card.h  products.cpp  products.h  table.cpp  table.h  user.cpp  user.h
resources/: resources.qrc
schemas/: car-dealership.sql  чистая без данных.sql
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  mainwindow.cpp
src/controller/include/: mainwindow.h  notifications_handler.h
src/controller/src/: mainwindow.cpp  notifications_handler.cpp
src/model/: CMakeLists.txt
src/model/include/: contract_templates.h  database_handler.h  domain.h  floating_widget.h  product_card.h  products.h  table.h  user.h
src/model/src/: contract_templates.cpp  database_handler.cpp  edit_dialog.cpp  floating_widget.cpp  product_card.cpp  products.cpp  table.cpp  user.cpp
src/model/tests/: CMakeLists.txt  ClientServiceTests.cpp  IntegrationTests.cpp  README.md  SimpleTests.cpp  UITests.cpp  UserTests.cpp
src/view/: CMakeLists.txt  mainwindow.ui  notifications.ui
